chore: support tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "lib": ["ESNext", "DOM", "DOM.Iterable", "ScriptHost"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "tests/**/*.tsx"],
-  "exclude": ["node_modules", "dist", "config.js"]
+  "exclude": ["node_modules", "dist"]
 }
